feat(optimizer): implement fixpoint iteration CBO and robust AST-based Tier 1 patterns
Added fixpoint iteration with deduplication, timeout protection, and cost-based gating in OptimizationEngine. Rewrote Tier 1 patterns to use safe dynamic parsing and reflection to guarantee semantic correctness and JSqlParser version compatibility.